SonarCloud fix: java:S1874 Deprecated code should not be used: class newInstance